# perl-amazon-s3

./: .gitignore  ChangeLog  Makefile.am  NEWS.md  README-BUILD.md  README-TESTING.md  README.md  TODO.md  VERSION  bootstrap  configure.ac  docker-compose.yml  perl-Amazon-S3.spec.in  s3-perl.pl
.github/workflows/: build.yml
autotools/: ads_PERL_LIBDIR.m4  ax_distcheck_hack.m4
cpan/: Makefile.am  buildspec.yml  requires  test-requires
src/main/: Makefile.am
src/main/perl/: Makefile.am  run-test  test.localstack
src/main/perl/lib/: Makefile.am
src/main/perl/lib/Amazon/: S3.pm.in
src/main/perl/lib/Amazon/S3/: Bucket.pm.in  BucketV2.pm.in  Constants.pm.in  Logger.pm.in  Util.pm.in
src/main/perl/t/: 01-api.t  02-logger.t  04-list-buckets.t  06-list-multipart-uploads.t
